fix: sponsor list logos not being vertically aligned to center

--- a/styles/SponsorList.module.css
+++ b/styles/SponsorList.module.css
@@ -10,6 +10,7 @@
 
 .sponsor_list_item {
   margin: 1rem;
+  display: flex;
 }
 
 .sponsor_list_item_logo {
